# svg-symmetry-tool

./: .gitignore  start.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: svg.py  symmetry.py
backend/app/services/: path_converter.py  svg_cropper.py  svg_parser.py  symmetry_detector.py  symmetry_fixer.py  symmetry_tests.py  width_visualizer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/components/: SvgCanvas.svelte  TestResultsPanel.svelte  ToolPanel.svelte  Uploader.svelte
frontend/src/lib/: api.js
