[project]
name = "svg-tools-backend"
version = "0.1.0"
description = "SVG visualization and modification backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "lxml>=5.2",
    "svgpathtools>=1.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "shapely>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
